--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,11 @@ jobs:
         with:
           python-version: 3.x
 
-      # Runs a set of commands to install and run mkdocs
-      - run: pip install mkdocs
-      - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force --clean --verbose
+      # Runs a set of commands to install and generate mkdocs
+      - name: Generate Docs
+        run: |
+          pip install mkdocs mkdocs-material Pygments
+          ./gradlew dokkaGfmMultiModule --no-configuration-cache
+          mv build/dokka/gfmMultiModule docs
+          cat README.md > docs/index.md
+          mkdocs gh-deploy
