--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
           python-version: 3.x
 
       # Runs a set of commands to install and run mkdocs
-      - run: pip install mkdocs
-      - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force --clean --verbose
+      - name: Generate Docs
+        run: |
+          pip install mkdocs mkdocs-material
+          cat README.md > docs/index.md
+          mkdocs gh-deploy --force --clean --verbose
