--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,6 @@ repo_url: https://github.com/ColstonBod-oy/weird-java-kotlin-notes
 theme:
   name: material
 
+use_directory_urls: false
+
 copyright: Copyright &copy; 2024 Colston Bod-oy
