--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,17 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
 
-use_directory_urls: false
+extra:
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+
+plugins:
+  - search
+  - tags
 
 copyright: Copyright &copy; 2024 Colston Bod-oy
