--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Weird Java & Kotlin Notes
+site_url: https://ColstonBod-oy.github.io/weird-java-kotlin-notes/
 repo_name: weird-java-kotlin-notes
 repo_url: https://github.com/ColstonBod-oy/weird-java-kotlin-notes
 
@@ -29,6 +30,13 @@ palette:
         icon: material/weather-sunny
         name: Switch to system preference
 
+features:
+    - navigation.tabs
+    - navigation.indexes
+    - navigation.top
+    - content.action.view
+    - content.code.copy
+
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
@@ -37,5 +45,32 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+
+extra:
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+
+  social:
+    - icon: fontawesome/solid/paper-plane
+      link: mailto:atickfaisal@gmail.com
+    - icon: fontawesome/brands/github
+      link: https://github.com/atick-faisal
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/atick-faisal
+    - icon: fontawesome/brands/medium
+      link: https://atickfaisal.medium.com
+    - icon: fontawesome/brands/stack-overflow
+      link: https://stackoverflow.com/users/12737399/atick-faisal
+    - icon: fontawesome/brands/researchgate
+      link: https://scholar.google.com/citations?user=ZiPKjAgAAAAJ&hl=en
+
+plugins:
+  - search
+  - tags
 
 copyright: Copyright &copy; 2024 Colston Bod-oy
