--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,6 @@ repo_url: https://github.com/ColstonBod-oy/weird-java-kotlin-notes
 
 theme:
   name: material
-  nav: false
-  toc: false
   palette:
 
     # Palette toggle for automatic mode
@@ -33,6 +31,9 @@ theme:
     - navigation.top
     - content.action.view
     - content.code.copy
+
+  material:
+    nav: false
 
 markdown_extensions:
   - pymdownx.highlight:
