--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
         run: |
           pip install mkdocs mkdocs-material Pygments
           cat README.md > docs/index.md
+          echo -e "---\nhide:\n  - navigation\n---\n$(cat docs/index.md)" > docs/index.md
           mkdocs gh-deploy --force --clean --verbose
