--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,9 @@ theme:
     - content.action.view
     - content.code.copy
 
+extra_css:
+  - extra.css
+
 markdown_extensions:
   - meta
   - pymdownx.highlight:
