--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
           pip install mkdocs mkdocs-material Pygments
           cat README.md > docs/index.md
           echo "---" > temp_file
+          echo "title: Weird Java & Kotlin Notes" >> temp_file
           echo "hide:" >> temp_file
-          echo "  - title" >> temp_file
           echo "  - navigation" >> temp_file
           echo "---" >> temp_file
           cat docs/index.md >> temp_file
