--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
         name: Switch to system preference
 
   features:
+    - header.autohide
     - navigation.top
     - navigation.instant
     - navigation.instant.progress
