--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ extra_css:
 
 markdown_extensions:
   - meta
+  - codehilite
   - pymdownx.highlight:
       use_pygments: true
       linenums: true
